--- a/package.json
+++ b/package.json
@@ -31,8 +31,7 @@
   },
   "dependencies": {
     "@jupyterlab/application": "^2.0.0",
-    "@jupyterlab/apputils": "^2.0.0",
-    "ayu": "^7.3.1"
+    "@jupyterlab/apputils": "^2.0.0"
   },
   "devDependencies": {
     "rimraf": "~2.6.2",
