fix syntax in on-push.yml

--- a/.github/workflows/on-push.yml
+++ b/.github/workflows/on-push.yml
@@ -36,6 +36,7 @@ jobs:
         jupyter labextension list 2>&1 | grep theme-ayu-mirage
 
   publish:
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
 
